test/users/vass/internal-error-message.good
internal-error-message.chpl:1: internal error: no field 'nonExistentField' in class 'R' in getField() [file:line]
